Claims v1-1 option prototyped

--- a/app/views/fetf/_includes/activity-list_task-section_claim_v1.1.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim_v1.1.html
@@ -5,7 +5,7 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Check items</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Items you're claiming</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -46,7 +46,7 @@
   
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Add item photos</div>
+          <div>Add photos</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -78,7 +78,7 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Check items</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Items you're claiming</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -90,7 +90,7 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/serial-number/serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -101,7 +101,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add invoices</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/invoice/invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -112,7 +112,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add bank statements</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/statement/guidance" aria-describedby="application-details-2-status">Add bank statements</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -123,7 +123,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add item photos</a>
+          <a class="govuk-link govuk-task-list__link" href="" aria-describedby="application-details-2-status">Add photos</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -156,7 +156,7 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Check items</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Items you're claiming</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -168,7 +168,7 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/serial-number/serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -177,7 +177,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/invoice/invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -188,7 +188,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add bank statements</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/statement/guidance" aria-describedby="application-details-2-status">Add bank statements</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -199,7 +199,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add item photos</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/photos/guidance" aria-describedby="application-details-2-status">Add photos</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -230,7 +230,7 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Check items</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Items you're claiming</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -242,7 +242,7 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/serial-number/serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -251,7 +251,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/invoice/invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -260,7 +260,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add bank statements</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/statement/guidance" aria-describedby="application-details-2-status">Add bank statements</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -271,7 +271,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add item photos</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/photos/guidance" aria-describedby="application-details-2-status">Add photos</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -301,7 +301,7 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Check items</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Items you're claiming</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -313,7 +313,7 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/serial-number/serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -322,7 +322,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/invoice/invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -331,7 +331,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add bank statements</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/statement/guidance" aria-describedby="application-details-2-status">Add bank statements</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -340,7 +340,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add item photos</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/photos/guidance" aria-describedby="application-details-2-status">Add photos</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -369,7 +369,7 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Check items</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Items you're claiming</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -381,7 +381,7 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/serial-number/serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -390,7 +390,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/invoice/invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -399,7 +399,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add bank statements</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/statement/guidance" aria-describedby="application-details-2-status">Add bank statements</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -408,7 +408,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add item photos</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/photos/guidance" aria-describedby="application-details-2-status">Add photos</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -420,7 +420,7 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Submit</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/submit" aria-describedby="application-details-2-status">Submit</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -437,7 +437,7 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Check items</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/claim-detail" aria-describedby="application-details-2-status">Items you're claiming</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -449,7 +449,7 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/serial-number/serial-number-guidance" aria-describedby="application-details-2-status">Add serial numbers</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -458,7 +458,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/invoice/invoice-guidance" aria-describedby="application-details-2-status">Add invoices</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -467,7 +467,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add bank statements</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/statement/guidance" aria-describedby="application-details-2-status">Add bank statements</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -476,7 +476,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Add item photos</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-1/photos/guidance" aria-describedby="application-details-2-status">Add photos</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
