--- a/app/views/fetf/claim/v1-1/confirmation.html
+++ b/app/views/fetf/claim/v1-1/confirmation.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-fetf.html" %}
+{% extends "layouts/main-claim-v1-1.html" %}
 
 {% set pageName="Confirmation" %}
 
@@ -82,7 +82,7 @@
        
 
        <p class="govuk-body">
-        <a href="../../claim/v1-0/email-submitted">Go to email</a></p>
+        <a href="../../claim/v1-1/email-submitted">Go to email</a></p>
        </p>
 
        
