--- a/app/views/fetf/claim/v1-1/index.html
+++ b/app/views/fetf/claim/v1-1/index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-fetf.html" %}
+{% extends "layouts/main-claim-v1-1.html" %}
 
 {% block pageTitle %}
 Start your claim
@@ -12,7 +12,7 @@ Start your claim
 {% block content %}
 
 
-{% include "../../_includes/sub-header_business-applicant-details.html" %}
+{% include "../../_includes/sub-header_business-agent-details.html" %}
 
   <main class="govuk-main-wrapper">
     <div class="govuk-grid-row">
