--- a/app/views/fetf/claim/v1-1/outcome-successful.html
+++ b/app/views/fetf/claim/v1-1/outcome-successful.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-fetf.html" %}
+{% extends "layouts/main-claim-v1-1.html" %}
 
 {% block pageTitle %}
 Claim outcome successful
