--- a/app/views/fetf/claim/v1-1/email-submitted.html
+++ b/app/views/fetf/claim/v1-1/email-submitted.html
@@ -194,7 +194,7 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
 						
             <p class="govuk-body">
-              <a href="index?fetf-status=04&fetf-apply=03b&fetf-agree=03&fetf-claim=03">Go back to task list</a></p>
+              <a href="/fetf/claim/v1-1/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=01f">Go back to task list</a></p>
              </p>
              
       </td>
