--- a/app/views/fetf/claim/v1-1/invoice/invoice-guidance.html
+++ b/app/views/fetf/claim/v1-1/invoice/invoice-guidance.html
@@ -68,7 +68,7 @@ Upload4
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
         Invoices </h1>
 
-      <p class="govuk-body-l">We’ll ask you to upload an invoice for each item. </p>
+      <p class="govuk-body-l">We’ll ask you to upload your invoices and tell us which items are on each invoice.</p>
 
       <h1 class="govuk-heading-l" style="margin-bottom: 20px;">
         Invoice rules</h1>
