--- a/app/views/fetf/claim/v1-1/invoice/check-answers-invoice.html
+++ b/app/views/fetf/claim/v1-1/invoice/check-answers-invoice.html
@@ -60,7 +60,7 @@ Upload4
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
-        <h1 class="govuk-heading-l">Check invoices</h1>
+        <h1 class="govuk-heading-xl">Check invoices</h1>
         <h2 class="govuk-heading-m">Uploaded invoice 1</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
