--- a/app/views/fetf/claim/v1-1/statement/check-answers.html
+++ b/app/views/fetf/claim/v1-1/statement/check-answers.html
@@ -62,7 +62,7 @@ Upload4
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
-        <h1 class="govuk-heading-l">Check bank statements</h1>
+        <h1 class="govuk-heading-xl">Check bank statements</h1>
         <h2 class="govuk-heading-m">Uploaded bank statement 1</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
