--- a/app/views/fetf/rewrite/select-items/item-list-add.html
+++ b/app/views/fetf/rewrite/select-items/item-list-add.html
@@ -17,7 +17,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="../check-your-business-type" method="post">
+    <form action="/selectComplete1" method="post">
 
       <span class="govuk-caption-l">Apply</span>
       
@@ -73,7 +73,7 @@
   Grand total = {{ data['Total'] }}
 
 </div>
-<form method="post" novalidate action="">
+
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="add-another-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend govuk-fieldset__legend--m">
