--- a/app/views/fetf/rewrite/task-list.html
+++ b/app/views/fetf/rewrite/task-list.html
@@ -62,9 +62,11 @@
 
 
     <li class="govuk-task-list__item ">
-        {% if (data.itemsComplete == 'Yes') %}
+
+        {% if (data.selectComplete == 'Yes') %}
           <div class="govuk-task-list__name-and-hint">
-            <a class="govuk-link govuk-task-list__link" href="select-items/item-list-add" aria-describedby="application-details-2-status">Select your items</a>
+            <a class="govuk-link govuk-task-list__link" href="select-items/selected-items" aria-describedby="application-details-2-status">Select your items</a>
+
           </div>
           <div class="govuk-task-list__status" id="company-details-1-status">
            Completed
@@ -81,13 +83,35 @@
         {% endif %}
     </li>
   
-    <li class="govuk-task-list__item">
-      <div class="govuk-task-list__name-and-hint">
-        <div>About your items</div>
-      </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-        Cannot start yet
-      </div>
+
+
+            <li class="govuk-task-list__item ">
+        {% if (data.aboutComplete == 'Yes') %}
+          <div class="govuk-task-list__name-and-hint">
+            <a class="govuk-link govuk-task-list__link" href="about-items/equipment-summary" aria-describedby="application-details-2-status">About your items</a>
+          </div>
+          <div class="govuk-task-list__status" id="company-details-1-status">
+           Completed
+          </div>
+        {% elseif (data.selectComplete == 'Yes') %}
+          <div class="govuk-task-list__name-and-hint">
+            <a class="govuk-link govuk-task-list__link" href="about-items/equipment-address" aria-describedby="application-details-2-status">About your items</a>
+          </div>
+          <div class="govuk-task-list__status" id="company-details-1-status">
+            <strong class="govuk-tag govuk-tag--blue">
+             Not yet started
+            </strong>
+          </div>
+        {% else %}
+          <div class="govuk-task-list__name-and-hint">
+            About your items
+          </div>
+          <div class="govuk-task-list__status" id="company-details-1-status">
+            
+             Cannot start yet
+            
+          </div>
+        {% endif %}
     </li>
 
         <li class="govuk-task-list__item ">
@@ -110,6 +134,27 @@
         {% endif %}
     </li>
   
+    {% if (data.uploadFin == 'Yes') %}
+      <li class="govuk-task-list__item ">
+        {% if (data.evComplete == 'Yes') %}
+          <div class="govuk-task-list__name-and-hint">
+            <a class="govuk-link govuk-task-list__link" href="upload-evidence/evidence-add" aria-describedby="application-details-2-status">Upload financial evidence</a>
+          </div>
+          <div class="govuk-task-list__status" id="company-details-1-status">
+           Completed
+          </div>
+        {% else %}
+          <div class="govuk-task-list__name-and-hint">
+            <a class="govuk-link govuk-task-list__link" href="upload-evidence/upload-start" aria-describedby="application-details-2-status">Upload financial evidence</a>
+          </div>
+          <div class="govuk-task-list__status" id="company-details-1-status">
+            <strong class="govuk-tag govuk-tag--blue">
+             Not yet started
+            </strong>
+          </div>
+        {% endif %}
+      </li>
+    {% endif %}
     
   
     <li class="govuk-task-list__item">
